--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
 		<footer>
 			<div class="container">
 				<div class="row d-flex">
-					<div class="col-md-6 d-flex  align-items-center mb-2">
+					<div class="col-md-6 d-flex align-items-center mb-2">
 						<img class="img-fluid" src="pics/logo.png" alt="Finans" width="20%" style="padding-right: 10px;">
 						<span class="text-white">© 2021  Finans S.A. - Instituição de pagamentos</span>
 					</div>
-					<div id="social" class="col-md-6 d-flex justify-content-end align-items-center mb-2">
+					<div id="social" class="col-md-6 d-flex justify-content-end mb-2">
 						<a class="btn btn-outline-light" href=""><i class="fa-brands fa-facebook fa-lg"></i></a>
 						<a class="btn btn-outline-light" href=""><i class="fa-brands fa-twitter fa-lg"></i></a>
 						<a class="btn btn-outline-light" href=""><i class="fa-brands fa-youtube fa-lg"></i></i></a>
