--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 					<div class="col-md-8 d-flex order-1 order-md-2">
 						<div class="align-self-center">
 							<h4>Sua conta virtual descomplicada</h4>
-							<p class="lead">Com o Finans você tem um cartão de débito e crédito gratuito que te dar <strong>muitas vantagens e muito cashback na hora</strong>.</p>
+							<p class="lead">Com o Finans você tem um cartão de débito e crédito gratuito com <strong>diversas vantagens e muito cashback</strong>.</p>
 						</div>
 					</div>
 				</div>
@@ -142,7 +142,7 @@
 					<div class="col-md-8 d-flex">
 						<div class="align-self-center">
 							<h4>Suporte a qualquer hora</h4>
-							<p class="lead">A equipe de suporte do Finans está aqui para resolver seus problemas e tirar suas dúvidas <strong>24 horas por dia</strong>
+							<p class="lead">A equipe de suporte do Finans está aqui para resolver seus problemas e tirar suas dúvidas <strong>24 horas por dia</strong>.
 							<br>
 							<a class="text-warning" href="">Clique aqui e fale com nosso suporte.</a></p>
 						</div>
