--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<header class="sticky-top">
-			<nav class="navbar navbar-expand-sm navbar-light bg-warning">
+			<nav class="navbar navbar-expand-md navbar-light bg-warning">
 				<div class="container">
 					<!-- logo -->
 					<a class="nav-brand" href="index.html">
@@ -26,18 +26,18 @@
 					</a>
 
 					<!-- burguer menu-->
-	          	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
-	            <span class="navbar-toggler-icon"></span>
-	          	</button>
+	          		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
+	          		 	<span class="navbar-toggler-icon"></span>
+	         	 	</button>
 
 					<!-- nav menus -->
 					<div class="collapse navbar-collapse justify-content-end" id="menu">
 						<ul class="navbar-nav">
 							<li class="nav-item"><a class="nav-link" href="">Home</a></li>
-							<li class="nav-item"><a class="nav-link" href="">Sobre nós</a></li>
+							<li class="nav-item"><a class="nav-link" href="">Sobre</a></li>
 							<li class="nav-item"><a class="nav-link" href="">Suporte</a></li>
-							<li class="nav-item"><a class="btn btn-outline-light d-block mb-2" href="">Entrar</a></li>
-							<li class="nav-item"><a class="btn btn-outline-light d-block" href="">Quero ser Finans</a></li>
+							<li class="nav-item"><a class="btn btn-outline-light mb-2" href="">Entrar</a></li>
+							<li class="nav-item"><a class="btn btn-outline-light" href="">Cadastre-se</a></li>
 						</ul>
 					</div>
 				</div>
