--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 							<li class="nav-item"><a class="nav-link" href="">Home</a></li>
 							<li class="nav-item"><a class="nav-link" href="">Sobre</a></li>
 							<li class="nav-item"><a class="nav-link" href="">Suporte</a></li>
-							<li class="nav-item"><a class="btn btn-outline-light mb-2" href="">Entrar</a></li>
-							<li class="nav-item"><a class="btn btn-outline-light" href="">Cadastre-se</a></li>
+							<li class="nav-item"><a class="btn btn-outline-light mb-2 d-block" href="">Entrar</a></li>
+							<li class="nav-item"><a class="btn btn-outline-light d-block" href="">Cadastre-se</a></li>
 						</ul>
 					</div>
 				</div>
