--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 					<div class="col-md-8 d-flex order-1 order-md-2">
 						<div class="align-self-center">
 							<h4>Sua conta virtual descomplicada</h4>
-							<p class="lead">Com o Finans você tem um cartão de débito e crédito gratuito com <strong>diversas vantagens e muito cashback</strong>.</p>
+							<p class="lead">Economize tempo organizando sua vida financeira e <strong>aproveite o momento com o que realmente importa</strong>.</p>
 						</div>
 					</div>
 				</div>
