--- a/index.html
+++ b/index.html
@@ -1,55 +1,59 @@
 <!doctype html>
 <html lang="pt-br">
-	<head>
-		<!-- Required meta tags -->
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<!-- Bootstrap CSS /5.1.3 -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-		<!-- CSS -->
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+    <!-- Font Awesome-->
+    <script src="https://kit.fontawesome.com/37f54710bc.js" crossorigin="anonymous"></script>
 
-		<!-- Font Awesome -->
-		<script src="https://kit.fontawesome.com/37f54710bc.js" crossorigin="anonymous"></script>
+    <!-- HTML5Shiv -->
+    <!--[if lt IE 9]>
+    <script src="https://cdn.es.gov.br/scripts/extensions/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <![endif]-->
 
-		<title>Finans - seu banco, descomplicado</title>
-	</head>
-	<body>
-		<header class="sticky-top">
-			<nav class="navbar navbar-expand-md navbar-light bg-warning">
-				<div class="container">
-					<!-- logo -->
-					<a class="nav-brand" href="index.html">
-						<img src="pics/logo.png" width="142" alt="Finans">
-					</a>
+    <!-- Style CSS -->
+    <title>Finans - seu banco, descomplicado</title>
+    <link rel="icon" href="pics/favicon.png">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
-					<!-- burguer menu-->
-	          		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
-	          		 	<span class="navbar-toggler-icon"></span>
-	         	 	</button>
-
-					<!-- nav menus -->
-					<div class="collapse navbar-collapse justify-content-end" id="menu">
-						<ul class="navbar-nav">
-							<li class="nav-item"><a class="nav-link" href="">Home</a></li>
-							<li class="nav-item"><a class="nav-link" href="">Sobre</a></li>
-							<li class="nav-item"><a class="nav-link" href="">Suporte</a></li>
-							<li class="nav-item"><a class="btn btn-outline-light mb-2 d-block" href="">Entrar</a></li>
-							<li class="nav-item"><a class="btn btn-outline-light d-block" href="">Cadastre-se</a></li>
-						</ul>
-					</div>
+  </head>
+  <body>
+  	<header class="sticky-top">
+  		<nav class="navbar navbar-expand-md navbar-light">
+  			<div class="container">
+  				<!-- Logo -->
+  				<a class="nav-brand" href="index.html">
+  					<img src="pics/logo.png" width="142" alt="Finans">
+  				</a>
+  				<!-- Burguer -->
+  				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
+  					<i class="fa-solid fa-bars fa-lg text-white"></i>
+  				</button>
+  				<!-- Menus -->
+  				<div class="collapse navbar-collapse justify-content-end" id="menu">
+					<ul class="navbar-nav">
+						<li class="nav-item"><a class="nav-link" href="">Home</a></li>
+						<li class="nav-item"><a class="nav-link" href="">Sobre</a></li>
+						<li class="nav-item"><a class="nav-link" href="">Suporte</a></li>
+						<li class="nav-item"><a class="btn btn-outline-light d-block" href="">Entrar</a></li>
+						<li class="nav-item"><a class="btn btn-outline-light d-block" href="">Cadastre-se</a></li>
+					</ul>
 				</div>
-			</nav>
-		</header>
+  			</div>
+  		</nav>
+  	</header>
 
-		<section id="home"><!-- home start-->
+  	<section id="main">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 d-flex">
 						<div class="align-self-center">
-							<h1 class="display-4">Suas contas, <strong>descomplicadas</strong></h1>
+							<h1 class="display-4">Suas contas, <strong>descomplicadas.</strong></h1>
 							<p class="lead">Usado por mais de 800 mil pessoas, o Finans é um banco virtual que vai facilitar a sua vida.</p>
 							<form class="mt-4 mb-4">
 								<div class="input-group input-group-lg">
@@ -66,35 +70,35 @@
 						</div>
 					</div>
 					<div class="col-md-6 d-none d-md-block">
-						<img src="pics/capa-mulher.png" alt="Imagem de uma mulher sorrindo e segurando uma moeda de um real">
+						<img src="pics/capa-mulher.png" alt="Imagem de uma mulher sorrindo e segurando uma moeda">
 					</div>
 				</div>
 			</div>
-		</section><!-- home end-->
+		</section>
 
-		<section class="box"><!-- content start - texto 1 -->
+		<section id="second">
 			<div class="container">
-				<div class="row padds">
-					<div class="col-md-8 d-flex">
+				<div class="row">
+					<div class="col-md-7 d-flex">
 						<div class="align-self-center">
 							<h4>Saiba para onde vai seu dinheiro</h4>
 							<p class="lead">Com o Finans, você organiza todos os seus lançamentos. E, como um truque de mágica, <strong>você sabe de onde vem e para onde vai o seu dinheiro</strong>.</p>
 						</div>
 					</div>
-					<div class="col-md-4 d-flex justify-content-center">
+					<div class="col-md-5 d-flex justify-content-center">
 						<img class="img-fluid" src="pics/saiba.png">
 					</div>
 				</div>
 			</div>
-		</section><!-- content end - texto 1 -->
+		</section>
 
-		<section class="box"><!-- content start - texto 2 -->
+		<section id="third">
 			<div class="container">
-				<div class="row padds">
-					<div class="col-md-3 d-flex order-2 order-md-1 justify-content-center">
-						<img class="needsmall img-fluid" src="pics/juros.png">
+				<div class="row">
+					<div class="col-md-5 d-flex order-2 order-md-1">
+						<img class="img-fluid" src="pics/juros.png" width="50%">
 					</div>
-					<div class="col-md-9 d-flex order-1 order-md-2">
+					<div class="col-md-7 d-flex order-1 order-md-2">
 						<div class="align-self-center">
 							<h4>Sua conta virtual descomplicada</h4>
 							<p class="lead">Com o Finans você tem um cartão de débito e crédito gratuito que te dar <strong>muitas vantagens e muito cashback</strong>.</p>
@@ -102,63 +106,47 @@
 					</div>
 				</div>
 			</div>
-		</section><!-- content end - texto 2 -->
+		</section>
 
-		<section class="box"><!-- content start - text 3 -->
+		<section id="fourth">
 			<div class="container">
-				<div class="row padds">
-					<div class="col-md-8 d-flex">
+				<div class="row">
+					<div class="col-md-7 d-flex">
 						<div class="align-self-center">
-							<h4>Saiba para onde vai seu dinheiro</h4>
-							<p class="lead">O Finans vai <strong>além do básico</strong> e permite que você faça controles incriveís e essenciais para sua vida financeira. Simples assim. </p>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<img class="img-fluid" src="pics/facil.png">
-					</div>
-				</div>
-			</div>
-		</section><!-- content end - text 3 -->
-
-		<section class="box"><!-- content start - text 4 -->
-			<div class="container">
-				<div class="row padds">
-					<div class="col-md-4 d-flex order-2 order-md-1">
-						<img class="img-fluid" src="pics/economize.png" width="100%">
-					</div>
-					<div class="col-md-8 d-flex order-1 order-md-2">
-						<div class="align-self-center">
-							<h4>Sua conta virtual descomplicada</h4>
+							<h4>Prático e rápido</h4>
 							<p class="lead">Economize tempo organizando sua vida financeira e <strong>aproveite o momento com o que realmente importa</strong>.</p>
 						</div>
 					</div>
+					<div class="col-md-5 d-flex">
+						<img class="img-fluid" src="pics/economize.png">
+					</div>
 				</div>
 			</div>
-		</section><!-- content end - text 4 -->
+		</section>
 
-		<section class="box"><!-- content start - text 5 -->
+		<section id="fifth">
 			<div class="container">
-				<div class="row padds">
-					<div class="col-md-8 d-flex">
+				<div class="row">
+					<div class="col-md-4 order-2 order-md-1">
+						<img class="img-fluid" src="pics/suporte.png">
+					</div>
+					<div class="col-md-8 d-flex order-1 order-md-2">
 						<div class="align-self-center">
 							<h4>Suporte a qualquer hora</h4>
 							<p class="lead">A equipe de suporte do Finans está aqui para resolver seus problemas e tirar suas dúvidas <strong>24 horas por dia</strong>.
 							<br>
-							<a class="text-warning" href="">Clique aqui e fale com nosso suporte.</a></p>
+							<a href="">Clique aqui e fale com nosso suporte.</a></p>
 						</div>
-					</div>
-					<div class="col-md-4 text-center">
-						<img class="img-fluid" src="pics/suporte.png">
 					</div>
 				</div>
 			</div>
-		</section><!-- content end - text 5 -->
+		</section>
 
 		<footer>
 			<div class="container">
 				<div class="row d-flex">
 					<div class="col-md-6 d-flex align-items-center mb-2">
-						<img class="img-fluid" src="pics/logo.png" alt="Finans" width="20%" style="padding-right: 10px;">
+						<img class="img-fluid" src="pics/logo.png" alt="Finans" width="20%">
 						<span class="text-white">© 2021  Finans S.A. - Instituição de pagamentos</span>
 					</div>
 					<div id="social" class="col-md-6 d-flex justify-content-end mb-2">
@@ -172,18 +160,15 @@
 			</div>
 		</footer>
 
+    <!-- Optional JavaScript; choose one of the two! -->
 
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-
-		<!-- Optional JavaScript; choose one of the two! -->
-
-		<!-- Option 1: Bootstrap Bundle with Popper -->
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-		<!-- Option 2: Separate Popper and Bootstrap JS -->
-		<!--
-		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-		-->
-	</body>
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    -->
+  </body>
 </html>
