--- a/index.html
+++ b/index.html
@@ -1,174 +1,172 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
     <!-- Font Awesome-->
     <script src="https://kit.fontawesome.com/37f54710bc.js" crossorigin="anonymous"></script>
-
-    <!-- HTML5Shiv -->
-    <!--[if lt IE 9]>
-    <script src="https://cdn.es.gov.br/scripts/extensions/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <![endif]-->
-
-    <!-- Style CSS -->
-    <title>Finans - seu banco, descomplicado</title>
-    <link rel="icon" href="pics/favicon.png">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-
-  </head>
-  <body>
-  	<header class="sticky-top">
-  		<nav class="navbar navbar-expand-md navbar-light">
-  			<div class="container">
-  				<!-- Logo -->
-  				<a class="nav-brand" href="index.html">
-  					<img src="pics/logo.png" width="142" alt="Finans">
-  				</a>
-  				<!-- Burguer -->
-  				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
-  					<i class="fa-solid fa-bars fa-lg text-white"></i>
-  				</button>
-  				<!-- Menus -->
-  				<div class="collapse navbar-collapse justify-content-end" id="menu">
-					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link" href="">Home</a></li>
-						<li class="nav-item"><a class="nav-link" href="">Sobre</a></li>
-						<li class="nav-item"><a class="nav-link" href="">Suporte</a></li>
-						<li class="nav-item"><a class="btn btn-outline-light d-block" href="">Entrar</a></li>
-						<li class="nav-item"><a class="btn btn-outline-light d-block" href="">Cadastre-se</a></li>
-					</ul>
-				</div>
-  			</div>
-  		</nav>
-  	</header>
-
-  	<section id="main">
+	<link rel="stylesheet" href="./assets/css/style.css">
+	<!-- Title and Fav Icon-->
+	<title>Finans - seu banco, descomplicado</title>
+	<link rel="shortcut icon" href="./assets/images/" type="image/x-icon">
+</head>
+<body>
+	<header class="sticky-top">
+		<nav class="navbar navbar-expand-md navbar-light">
 			<div class="container">
-				<div class="row">
-					<div class="col-md-6 d-flex">
-						<div class="align-self-center">
-							<h1 class="display-4">Suas contas, <strong>descomplicadas.</strong></h1>
-							<p class="lead">Usado por mais de 800 mil pessoas, o Finans é um banco virtual que vai facilitar a sua vida.</p>
-							<form class="mt-4 mb-4">
-								<div class="input-group input-group-lg">
+				<!-- Logo -->
+				<a class="nav-brand" href="index.html">
+					<img src="./assets/images/logo.png" width="142" alt="Finans">
+				</a>
+				<!-- Burguer -->
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
+					<i class="fa-solid fa-bars fa-lg text-white"></i>
+				</button>
+				<!-- Menus -->
+				<div class="collapse navbar-collapse justify-content-end" id="menu">
+				  <ul class="navbar-nav">
+					  <li class="nav-item"><a class="nav-link" href="">Home</a></li>
+					  <li class="nav-item"><a class="nav-link" href="">Sobre</a></li>
+					  <li class="nav-item"><a class="nav-link" href="">Suporte</a></li>
+					  <li class="nav-item"><a class="btn btn-outline-light d-block" href="">Entrar</a></li>
+					  <li class="nav-item"><a class="btn btn-primary d-block" href="">Cadastre-se</a></li>
+				  </ul>
+			  </div>
+			</div>
+		</nav>
+	</header>
+	<main class="d-flex">
+		<div class="container d-flex">
+			<div class="row">
+				<div class="col-lg-6 d-flex align-items-center">
+					<div>
+						<h1 class="display-4">Suas contas, <strong>descomplicadas.</strong></h1>
+						<p class="lead">Usado por mais de 800 mil pessoas, o Finans é um banco virtual que vai facilitar a sua vida.</p>
+						<form class="mt-4 mb-4">
+							<div class="input-group input-group-lg">
+								<div class="input-group-append input-group-lg">
 									<input class="form-control" type="email" name="email" placeholder="Digite seu e-mail" required>
-									<div class="input-group-append input-group-lg">
-										<button type="submit" class="btn btn-primary">Cadastre-se</button>
-									</div>
 								</div>
-							</form>
-							<p>Disponível para
-								<a class="btn btn-outline-light" href=""><i class="fa-brands fa-google-play fa-lg"></i></a>
-								<a class="btn btn-outline-light" href=""><i class="fa-brands fa-apple fa-lg"></i></a>
-							</p>
-						</div>
+								<div class="input-group-append input-group-lg mt-2 mt-sm-0">
+									<button type="submit" class="btn btn-primary w-100">Cadastre-se</button>
+								</div>
+							</div>
+						</form>
+						<p>Disponível para
+							<a class="btn btn-outline-light" href=""><i class="fa-brands fa-google-play fa-lg"></i></a>
+							<a class="btn btn-outline-light" href=""><i class="fa-brands fa-apple fa-lg"></i></a>
+						</p>
 					</div>
-					<div class="col-md-6 d-none d-md-block">
-						<img src="pics/capa-mulher.png" alt="Imagem de uma mulher sorrindo e segurando uma moeda">
+				</div>
+				<div class="col-lg-6 d-flex align-items-end justify-content-center d-none d-lg-flex">
+					<div>
+						<img src="./assets/images/main-cover.png" alt="Imagem de uma mulher sorrindo e segurando uma moeda">
 					</div>
 				</div>
 			</div>
-		</section>
-
-		<section id="second">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-7 d-flex">
-						<div class="align-self-center">
-							<h4>Saiba para onde vai seu dinheiro</h4>
-							<p class="lead">Com o Finans, você organiza todos os seus lançamentos. E, como um truque de mágica, <strong>você sabe de onde vem e para onde vai o seu dinheiro</strong>.</p>
-						</div>
+		</div>
+	</main>
+	<section id="second">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-7 d-flex">
+					<div class="align-self-center">
+						<h4>Saiba para onde vai seu dinheiro</h4>
+						<p class="lead">Com o Finans, você organiza todos os seus lançamentos. E, como um truque de mágica, <strong>você sabe de onde vem e para onde vai o seu dinheiro</strong>.</p>
 					</div>
-					<div class="col-md-5 d-flex justify-content-center">
-						<img class="img-fluid" src="pics/saiba.png">
+				</div>
+				<div class="col-md-5 d-flex justify-content-center">
+					<img class="img-fluid" src="./assets/images/second.png" alt="Ilustração da página inicial do site do Finans">
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="third">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-5 d-flex order-2 order-md-1">
+					<img class="img-fluid" src="./assets/images/third.png" width="50%" alt="Ilustração de um celular ao fundo com um cartão amarelo centralizado na frente. O cartão tem o logo do Finans">
+				</div>
+				<div class="col-md-7 d-flex order-1 order-md-2">
+					<div class="align-self-center">
+						<h4>Sua conta virtual descomplicada</h4>
+						<p class="lead">Com o Finans você tem um cartão de débito e crédito gratuito que te dar <strong>muitas vantagens e muito cashback</strong>.</p>
 					</div>
 				</div>
 			</div>
-		</section>
-
-		<section id="third">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-5 d-flex order-2 order-md-1">
-						<img class="img-fluid" src="pics/juros.png" width="50%">
+		</div>
+	</section>
+	<section id="fourth">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-7 d-flex">
+					<div class="align-self-center">
+						<h4>Prático e rápido</h4>
+						<p class="lead">Economize tempo organizando sua vida financeira e <strong>aproveite o momento com o que realmente importa</strong>.</p>
 					</div>
-					<div class="col-md-7 d-flex order-1 order-md-2">
-						<div class="align-self-center">
-							<h4>Sua conta virtual descomplicada</h4>
-							<p class="lead">Com o Finans você tem um cartão de débito e crédito gratuito que te dar <strong>muitas vantagens e muito cashback</strong>.</p>
-						</div>
+				</div>
+				<div class="col-md-5 d-flex">
+					<img class="img-fluid" src="./assets/images/fourth.png" alt="Ilustração de um relógio com um cifrão">
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="fifth">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 order-2 order-md-1">
+					<img class="img-fluid" src="./assets/images/fifth.png" alt="Ilustração de uma celular onde a dois balões de conversa, um do atendente do Finans e outro do cliente">
+				</div>
+				<div class="col-md-8 d-flex order-1 order-md-2">
+					<div class="align-self-center">
+						<h4>Suporte a qualquer hora</h4>
+						<p class="lead">A equipe de suporte do Finans está aqui para resolver seus problemas e tirar suas dúvidas <strong>24 horas por dia</strong>.
+						<br>
+						<a href="#">Clique aqui e fale com nosso suporte.</a></p>
 					</div>
 				</div>
 			</div>
-		</section>
-
-		<section id="fourth">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-7 d-flex">
-						<div class="align-self-center">
-							<h4>Prático e rápido</h4>
-							<p class="lead">Economize tempo organizando sua vida financeira e <strong>aproveite o momento com o que realmente importa</strong>.</p>
-						</div>
-					</div>
-					<div class="col-md-5 d-flex">
-						<img class="img-fluid" src="pics/economize.png">
-					</div>
+		</div>
+	</section>
+	<footer>
+		<div class="container">
+			<div class="row d-flex">
+				<div class="col-md-6 d-flex align-items-center mb-2">
+					<img class="img-fluid" src="./assets/images/logo.png" alt="Finans" width="20%">
+					<span class="text-white">© 2021  Finans S.A. - Instituição de pagamentos</span>
+				</div>
+				<div id="social" class="col-md-6 d-flex justify-content-end mb-2">
+					<a class="btn btn-outline-light" href=""><i class="fa-brands fa-facebook fa-lg"></i></a>
+					<a class="btn btn-outline-light" href=""><i class="fa-brands fa-twitter fa-lg"></i></a>
+					<a class="btn btn-outline-light" href=""><i class="fa-brands fa-youtube fa-lg"></i></i></a>
+					<a class="btn btn-outline-light" href=""><i class="fa-brands fa-linkedin fa-lg"></i></a>
+					<a class="btn btn-outline-light" href=""><i class="fa-brands fa-instagram fa-lg"></i></i></a>
+					
 				</div>
 			</div>
-		</section>
-
-		<section id="fifth">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-4 order-2 order-md-1">
-						<img class="img-fluid" src="pics/suporte.png">
-					</div>
-					<div class="col-md-8 d-flex order-1 order-md-2">
-						<div class="align-self-center">
-							<h4>Suporte a qualquer hora</h4>
-							<p class="lead">A equipe de suporte do Finans está aqui para resolver seus problemas e tirar suas dúvidas <strong>24 horas por dia</strong>.
-							<br>
-							<a href="">Clique aqui e fale com nosso suporte.</a></p>
-						</div>
-					</div>
+			<div class="row thenextbunny text-center">
+				<div class="col-12">
+					<p>Feito por <strong>Vitor Coelho</strong></p>  
+				</div>
+				<div class="col-12 d-flex justify-content-center">
+					<a href="http://github.com/thenextbunny" target="_blank">
+						<img src="./assets/images/thenextbunny/square brands/github.svg" alt="Perfil do Vitor Coelho no GitHub">
+					</a>
+					<a href="https://www.linkedin.com/in/vitorcoelhot/" target="_blank">
+                        <img src="./assets/images/thenextbunny/square brands/linkedin.svg" alt="Perfil do LinkedIn do Vitor Coelho">
+                    </a>
+					<a href="mailto:vitorcoelhosilvat@gmail.com" target="_blank">
+						<img src="./assets/images/thenextbunny/square brands/email.svg" alt="Email do Vitor Coelho">
+					</a>
 				</div>
 			</div>
-		</section>
+		</div>
+	</footer>
 
-		<footer>
-			<div class="container">
-				<div class="row d-flex">
-					<div class="col-md-6 d-flex align-items-center mb-2">
-						<img class="img-fluid" src="pics/logo.png" alt="Finans" width="20%">
-						<span class="text-white">© 2021  Finans S.A. - Instituição de pagamentos</span>
-					</div>
-					<div id="social" class="col-md-6 d-flex justify-content-end mb-2">
-						<a class="btn btn-outline-light" href=""><i class="fa-brands fa-facebook fa-lg"></i></a>
-						<a class="btn btn-outline-light" href=""><i class="fa-brands fa-twitter fa-lg"></i></a>
-						<a class="btn btn-outline-light" href=""><i class="fa-brands fa-youtube fa-lg"></i></i></a>
-						<a class="btn btn-outline-light" href=""><i class="fa-brands fa-linkedin fa-lg"></i></a>
-						<a class="btn btn-outline-light" href=""><i class="fa-brands fa-instagram fa-lg"></i></i></a>
-					</div>
-				</div>
-			</div>
-		</footer>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+	<!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
-  </body>
+</body>
 </html>
