Fix files, folders, index.html, style.css and README.md

--- a/index.html
+++ b/index.html
@@ -133,34 +133,39 @@
 	</section>
 	<footer>
 		<div class="container">
-			<div class="row d-flex">
-				<div class="col-md-6 d-flex align-items-center mb-2">
-					<img class="img-fluid" src="./assets/images/logo.png" alt="Finans" width="20%">
-					<span class="text-white">© 2021  Finans S.A. - Instituição de pagamentos</span>
+			<div class="row">
+				<div class="col-12 col-md-4 mt-2">
+					<img class="img-fluid" src="./assets/images/logo.png" alt="Finans" width="150px">
+					<span class="text-white">© 2021  Finans S.A.</span>
 				</div>
-				<div id="social" class="col-md-6 d-flex justify-content-end mb-2">
-					<a class="btn btn-outline-light" href=""><i class="fa-brands fa-facebook fa-lg"></i></a>
-					<a class="btn btn-outline-light" href=""><i class="fa-brands fa-twitter fa-lg"></i></a>
-					<a class="btn btn-outline-light" href=""><i class="fa-brands fa-youtube fa-lg"></i></i></a>
-					<a class="btn btn-outline-light" href=""><i class="fa-brands fa-linkedin fa-lg"></i></a>
-					<a class="btn btn-outline-light" href=""><i class="fa-brands fa-instagram fa-lg"></i></i></a>
-					
+				<div class="col-12 col-md-8 d-block text-center">
+					<a class="btn btn-outline-light mt-2" href=""><i class="fa-brands fa-facebook fa-lg"></i> Facebook</a>
+					<a class="btn btn-outline-light mt-2" href=""><i class="fa-brands fa-twitter fa-lg"></i> Twitter</a>
+					<a class="btn btn-outline-light mt-2" href=""><i class="fa-brands fa-youtube fa-lg"></i> YouTube</i></a>
+					<a class="btn btn-outline-light mt-2" href=""><i class="fa-brands fa-linkedin fa-lg"></i> LinkedIn</a>
+					<a class="btn btn-outline-light mt-2" href=""><i class="fa-brands fa-instagram fa-lg"></i></i> Instagram</a>
 				</div>
 			</div>
-			<div class="row thenextbunny text-center">
+			<div class="thenextbunny row text-center">
 				<div class="col-12">
-					<p>Feito por <strong>Vitor Coelho</strong></p>  
+					<p>Feito por <strong>Vitor Coelho</strong></p>
 				</div>
-				<div class="col-12 d-flex justify-content-center">
-					<a href="http://github.com/thenextbunny" target="_blank">
-						<img src="./assets/images/thenextbunny/square brands/github.svg" alt="Perfil do Vitor Coelho no GitHub">
-					</a>
-					<a href="https://www.linkedin.com/in/vitorcoelhot/" target="_blank">
-                        <img src="./assets/images/thenextbunny/square brands/linkedin.svg" alt="Perfil do LinkedIn do Vitor Coelho">
-                    </a>
-					<a href="mailto:vitorcoelhosilvat@gmail.com" target="_blank">
-						<img src="./assets/images/thenextbunny/square brands/email.svg" alt="Email do Vitor Coelho">
-					</a>
+				<div class="col-12 mb-2">
+					<span>
+						<a href="http://github.com/thenextbunny" target="_blank">
+							<img src="./assets/images/tnb svg icons/square/github.svg" alt="Perfil do Vitor Coelho no GitHub">
+						</a>
+					</span>
+					<span>
+						<a href="https://www.linkedin.com/in/vitorcoelhot/" target="_blank">
+							<img src="./assets/images/tnb svg icons/square/linkedin.svg" alt="Perfil do LinkedIn do Vitor Coelho">
+						</a>
+					</span>
+					<span>
+						<a href="mailto:vitorcoelhosilvat@gmail.com" target="_blank">
+							<img src="./assets/images/tnb svg icons/square/email.svg" alt="Email do Vitor Coelho">
+						</a>
+					</span>
 				</div>
 			</div>
 		</div>
